Update share-img for old posts

--- a/_posts/2019-02-07-new-site.md
+++ b/_posts/2019-02-07-new-site.md
@@ -2,6 +2,7 @@
 layout: post
 title: New site!
 subtitle: With new and improved content
+share-img: https://pastillilabs.com/img/situations-post.png
 ---
 
 At last we got a decent(_ish_) web site!
