--- a/_posts/2019-02-08-version-204.md
+++ b/_posts/2019-02-08-version-204.md
@@ -2,6 +2,7 @@
 layout: post
 title: Situations updated!
 subtitle: version 3.1.204
+share-img: https://pastillilabs.com/img/situations-post.png
 ---
 
 New version of **Situations** is now available for **[Android](https://play.google.com/store/apps/details?id=com.pastillilabs.situations2)**!
