--- a/_posts/2019-02-21-version-212.md
+++ b/_posts/2019-02-21-version-212.md
@@ -2,6 +2,7 @@
 layout: post
 title: New updates available!
 subtitle: version 3.1.212
+share-img: https://pastillilabs.com/img/situations-post.png
 ---
 
 Another update for **Situations** is now available for **[Android](https://play.google.com/store/apps/details?id=com.pastillilabs.situations2)** and Sailfish OS!
