fix extra "the" in v216 post

--- a/_posts/2019-02-25-version-216.md
+++ b/_posts/2019-02-25-version-216.md
@@ -16,7 +16,7 @@ This release contains following changes:
 
 The last two items apply for Sailfish also.
 
-**And the the good news:**
+**And the good news:**
 
 Google finally approved Situations for an exception to use SMS permissions in Play Store. That is, Situations is able to continue providing the existing SMS related features as is. And doesn't even have to be configured as the default assistant application anymore because of it. YAY!
 
