--- a/_posts/2019-03-27-version-220.md
+++ b/_posts/2019-03-27-version-220.md
@@ -2,7 +2,7 @@
 layout: post
 title: New features & fixes!
 subtitle: version 3.1.220
-bigimg: https://pastillilabs.com/img/bg-post-1.jpg
+bigimg: /img/bg-post-1.jpg
 share-img: https://pastillilabs.com/img/situations-post.png
 ---
 
