--- a/_posts/2019-03-27-version-220.md
+++ b/_posts/2019-03-27-version-220.md
@@ -13,18 +13,19 @@ This time the release contains following changes common to both platforms:
 - Fixed overlapping actions restore state handling
 - Fixed evaluation of situation being moved from manual to automatic state
 
-Android specific changes:
+**Android** specific changes:
 - Added In-call Volume plugin (condition)
 - Re-enabled Internet Sharing action for latest versions of Android
 - Updated app framework & libraries
 
-Sailfish specific changes:
+**Sailfish** specific changes:
 - Added Powersave plugin
 
 Internet Sharing action on Android is based on quite a hackish workaround found on [Stack Overflow](https://stackoverflow.com/a/49356255). It works on our test Android 8 & 9 devices, but there are no guarantees that it does so on all possible devices or future Android versions. But for now many of you can again enjoy this much requested feature :)
 
-Both the sudden rebirth of Internet Sharing action and the new Call State condition - and the fixes to bugs in application logic - were requested or reported by our active users. If you happen to have something (anything) in mind regarding the app, it doesn't hurt to send us your thoughts via any of the (available channels)[https://pastillilabs.com/about/#contact]!
+Both the sudden rebirth of Internet Sharing action and the new Call State condition - and the fixes to bugs in application logic - were requested or reported by our active users. If you happen to have something (anything) in mind regarding the app, it doesn't hurt to send us your thoughts via any of the [available channels](https://pastillilabs.com/about/#contact)!
 
 Br,  
 Pastilli Labs
 
+*Picture taken at [Kallahdenniemi beach](https://www.google.com/maps/@60.1864379,25.1439071,3a,75y,85.63h,86.63t/data=!3m8!1e1!3m6!1sAF1QipNi1FUdpJDPAuCbbBCVskAL-ptBoZ3AbCyUHpkG!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipNi1FUdpJDPAuCbbBCVskAL-ptBoZ3AbCyUHpkG%3Dw203-h100-k-no-pi-0-ya256.4378-ro0-fo100!7i7776!8i3888)*
