--- a/_posts/2019-03-27-version-220.md
+++ b/_posts/2019-03-27-version-220.md
@@ -9,12 +9,12 @@ share-img: https://pastillilabs.com/img/situations-post.png
 **Situations** is once again updated for both **[Android](https://play.google.com/store/apps/details?id=com.pastillilabs.situations2)** and **Sailfish OS**!
 
 This time the release contains following changes common to both platforms:
-- Added Call State plugin (condition & action)
+- Added Call State plugin (condition)
 - Fixed overlapping actions restore state handling
 - Fixed evaluation of situation being moved from manual to automatic state
 
 **Android** specific changes:
-- Added In-call Volume plugin (condition)
+- Added In-call Volume plugin
 - Re-enabled Internet Sharing action for latest versions of Android
 - Updated app framework & libraries
 
