Assets path update

--- a/_posts/2019-02-25-version-216.md
+++ b/_posts/2019-02-25-version-216.md
@@ -2,7 +2,7 @@
 layout: post
 title: Fixes and other good news!
 subtitle: version 3.1.216
-share-img: https://pastillilabs.com/img/situations-post.png
+share-img: https://pastillilabs.com/assets/img/situations-post.png
 ---
 
 **Situations** is now updated for both **[Android](https://play.google.com/store/apps/details?id=com.pastillilabs.situations2)** and **Sailfish OS**!
