--- a/_posts/2019-06-10-version-232.md
+++ b/_posts/2019-06-10-version-232.md
@@ -2,8 +2,8 @@
 layout: post
 title: Fixes and some behavioral changes
 subtitle: version 3.1.232
-bigimg: /img/bg-post-2.jpg
-share-img: https://pastillilabs.com/img/situations-post.png
+cover-img: /assets/img/bg-post-2.jpg
+share-img: https://pastillilabs.com/assets/img/situations-post.png
 ---
 
 Updated packages for **Situations** are available for both **[Android](https://play.google.com/store/apps/details?id=com.pastillilabs.situations2)** and **Sailfish OS**!
