--- a/_posts/2019-10-29-version-250.md
+++ b/_posts/2019-10-29-version-250.md
@@ -2,8 +2,8 @@
 layout: post
 title: Slightly bigger update
 subtitle: version 3.2.250
-bigimg: /img/bg-post-3.jpg
-share-img: https://pastillilabs.com/img/situations-post.png
+cover-img: /assets/img/bg-post-3.jpg
+share-img: https://pastillilabs.com/assets/img/situations-post.png
 ---
 
 It has been quiet in the Situations land of updates recently, but now we have some new stuff to share. Version 3.2.250 is now available for both **[Android](https://play.google.com/store/apps/details?id=com.pastillilabs.situations2)** and **Sailfish OS**!
