--- a/_posts/2020-02-11-version-258.md
+++ b/_posts/2020-02-11-version-258.md
@@ -2,7 +2,7 @@
 layout: post
 title: Small improvements for Sailfish
 subtitle: version 3.2.258
-share-img: https://pastillilabs.com/img/situations-post.png
+share-img: https://pastillilabs.com/assets/img/situations-post.png
 ---
 
 Today we've made Situations version 3.2.258 officially available for **Sailfish OS**.
