--- a/_posts/2020-02-21-version-260.md
+++ b/_posts/2020-02-21-version-260.md
@@ -2,7 +2,7 @@
 layout: post
 title: Small improvements for Android
 subtitle: version 3.2.260
-share-img: https://pastillilabs.com/img/situations-post.png
+share-img: https://pastillilabs.com/assets/img/situations-post.png
 ---
 
 Today we've made Situations version 3.2.260 officially available for **[Android](https://play.google.com/store/apps/details?id=com.pastillilabs.situations2)**.
