--- a/_posts/2019-03-27-version-220.md
+++ b/_posts/2019-03-27-version-220.md
@@ -2,8 +2,8 @@
 layout: post
 title: New features & fixes!
 subtitle: version 3.1.220
-bigimg: /img/bg-post-1.jpg
-share-img: https://pastillilabs.com/img/situations-post.png
+cover-img: /assets/img/bg-post-1.jpg
+share-img: https://pastillilabs.com/assets/img/situations-post.png
 ---
 
 **Situations** is once again updated for both **[Android](https://play.google.com/store/apps/details?id=com.pastillilabs.situations2)** and **Sailfish OS**!
