--- a/_posts/2020-03-24-version-264.md
+++ b/_posts/2020-03-24-version-264.md
@@ -2,7 +2,7 @@
 layout: post
 title: New features & more improvements for latest Android versions
 subtitle: version 3.2.264
-share-img: https://pastillilabs.com/img/situations-post.png
+share-img: https://pastillilabs.com/assets/img/situations-post.png
 ---
 
 Situations 3.2.264 is now officially available for **[Android](https://play.google.com/store/apps/details?id=com.pastillilabs.situations2)**.
